--- a/src/fr/univavignon/ceri/FXMLHomePage.fxml
+++ b/src/fr/univavignon/ceri/FXMLHomePage.fxml
@@ -5,6 +5,8 @@
 
 <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univavignon.ceri.HomePageController">
    <children>
-      <Button fx:id="btn_back" layoutX="408.0" layoutY="338.0" mnemonicParsing="false" onAction="#retour" text="Retour" />
+      <Button fx:id="btn_back" layoutX="244.0" layoutY="360.0" mnemonicParsing="false" onAction="#retour" text="Retour" />
+      <Pane fx:id="visualisationWindow" layoutX="-3.0" prefHeight="350.0" prefWidth="544.0" style="-fx-background-color: #969da8;" />
+      <Label fx:id="fileName" layoutX="110.0" layoutY="363.0" prefHeight="18.0" prefWidth="121.0" style="-fx-border-color: #969da8;" text="Label" />
    </children>
 </AnchorPane>
