--- a/src/fr/univavignon/ceri/second_page.fxml
+++ b/src/fr/univavignon/ceri/second_page.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fr.univavignon.ceri.SecondPage"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univavignon.ceri.SecondPage">
+   <children>
+      <Button fx:id="btn_back" layoutX="1074.0" layoutY="735.0" mnemonicParsing="false" onAction="#retour" prefHeight="25.0" prefWidth="91.0" text="Retour" />
+   </children>
 </AnchorPane>
