--- a/src/fr/univavignon/ceri/second_page.fxml
+++ b/src/fr/univavignon/ceri/second_page.fxml
@@ -5,6 +5,7 @@
 
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univavignon.ceri.SecondPage">
    <children>
-      <Button fx:id="btn_back" layoutX="1074.0" layoutY="735.0" mnemonicParsing="false" onAction="#retour" prefHeight="25.0" prefWidth="91.0" text="Retour" />
+      <Button fx:id="btn_back" layoutX="1000.0" layoutY="735.0" mnemonicParsing="false" onAction="#retour" prefHeight="25.0" prefWidth="165.0" text="Retour" />
+      <Label fx:id="fileName" alignment="CENTER" layoutX="999.0" layoutY="695.0" prefHeight="25.0" prefWidth="165.0" style="-fx-border-color: #000000;" text="Label" />
    </children>
 </AnchorPane>
