--- a/src/fr/univavignon/ceri/second_page.fxml
+++ b/src/fr/univavignon/ceri/second_page.fxml
@@ -1,14 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univavignon.ceri.SecondPage">
    <children>
       <Button fx:id="btn_back" layoutX="1017.0" layoutY="735.0" mnemonicParsing="false" onAction="#retour" prefHeight="25.0" prefWidth="165.0" text="Retour" />
       <Label fx:id="fileName" alignment="CENTER" layoutX="1017.0" layoutY="694.0" prefHeight="25.0" prefWidth="165.0" style="-fx-border-color: #000000;" text="Label" />
-      <Pane fx:id="visualisationWindow" prefHeight="662.0" prefWidth="996.0" style="-fx-border-color: #000000;" />
-      <AnchorPane layoutX="999.0" prefHeight="662.0" prefWidth="201.0" style="-fx-border-color: #000000;" />
+      <Pane fx:id="visualisationWindow" prefHeight="662.0" prefWidth="996.0" />
+      <AnchorPane layoutX="999.0" prefHeight="662.0" prefWidth="201.0">
+         <children>
+            <Text layoutX="46.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistiques">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Text>
+            <Button layoutX="46.0" layoutY="98.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-wrap-text: true; -fx-text-fill: white; -fx-background-color: black;" text="Dist. forces entrants" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font></Button>
+            <Button layoutX="45.0" layoutY="331.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Dist. avg distance" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font></Button>
+            <Button layoutX="45.0" layoutY="173.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-wrap-text: true; -fx-background-color: black; -fx-text-fill: white;" text="Dist. forces sortants" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font></Button>
+            <Button layoutX="45.0" layoutY="252.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Dist. forces totales" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font></Button>
+            <Button layoutX="46.0" layoutY="412.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="111.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Dist. transitivité local" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
+            <Text layoutX="14.0" layoutY="525.0" strokeType="OUTSIDE" strokeWidth="0.0" text="transivité global: ">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="14.0" layoutY="555.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Coefficient d'assortativité de dégrées:" wrappingWidth="111.482421875">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text layoutX="14.0" layoutY="623.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Réciprocité:" />
+         </children></AnchorPane>
       <AnchorPane layoutX="-7.0" layoutY="666.0" prefHeight="135.0" prefWidth="1004.0" style="-fx-border-color: #000000;" />
    </children>
 </AnchorPane>
