--- a/src/fr/univavignon/ceri/main_page.fxml
+++ b/src/fr/univavignon/ceri/main_page.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univavignon.ceri.Main_page_Controller">
     <children>
@@ -21,6 +22,13 @@
                 </Button>
             </children>
         </AnchorPane>
-        <AnchorPane prefHeight="683.0" prefWidth="1200.0" />
+        <AnchorPane prefHeight="683.0" prefWidth="1200.0">
+         <children>
+            <ImageView fitHeight="683.0" fitWidth="683.0" layoutX="272.0" layoutY="-14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@WebCrawl.png" />
+               </image>
+            </ImageView>
+         </children></AnchorPane>
     </children>
 </AnchorPane>
