--- a/src/fr/univavignon/ceri/second_page.fxml
+++ b/src/fr/univavignon/ceri/second_page.fxml
@@ -2,42 +2,104 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univavignon.ceri.SecondPage">
    <children>
-      <Button fx:id="btn_back" layoutX="1017.0" layoutY="735.0" mnemonicParsing="false" onAction="#retour" prefHeight="25.0" prefWidth="165.0" text="Retour" />
-      <Label fx:id="fileName" alignment="CENTER" layoutX="1017.0" layoutY="694.0" prefHeight="25.0" prefWidth="165.0" style="-fx-border-color: #000000;" text="Label" />
-      <Pane fx:id="visualisationWindow" prefHeight="662.0" prefWidth="996.0" />
-      <AnchorPane layoutX="999.0" prefHeight="662.0" prefWidth="201.0">
+      <GridPane alignment="CENTER" gridLinesVisible="true" layoutY="666.0" prefHeight="134.0" prefWidth="1003.0" style="-fx-background-color: #2657a6;">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="98.0" minHeight="10.0" prefHeight="98.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Algorithme de spatialisation" textAlignment="CENTER" wrappingWidth="252.341796875">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Algorithme de partitionnement" textAlignment="CENTER" wrappingWidth="252.341796875" GridPane.columnIndex="1">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Algorithme de centralité" textAlignment="CENTER" wrappingWidth="252.341796875" GridPane.columnIndex="2">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Algorithme de graphe" textAlignment="CENTER" wrappingWidth="252.341796875" GridPane.columnIndex="3">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Text>
+            <ScrollPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+              </content>
+            </ScrollPane>
+            <ScrollPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+              </content>
+            </ScrollPane>
+            <ScrollPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+              </content>
+            </ScrollPane>
+            <ScrollPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+              </content>
+            </ScrollPane>
+         </children>
+      </GridPane>
+      <Label fx:id="fileName" alignment="CENTER" layoutX="1017.0" layoutY="708.0" prefHeight="25.0" prefWidth="165.0" style="-fx-border-color: #000000;" text="Label" />
+      <Pane fx:id="visualisationWindow" prefHeight="668.0" prefWidth="1003.0">
+         <children>
+            <Line endX="877.29296875" endY="404.0" layoutX="326.0" layoutY="264.0" startX="-326.0" startY="404.0" strokeWidth="5.0" />
+            <Line endX="78.5" endY="544.5" layoutX="926.0" layoutY="255.0" startX="77.0" startY="-255.0" strokeWidth="5.0" />
+         </children></Pane>
+      <AnchorPane layoutX="1002.0" prefHeight="668.0" prefWidth="198.0">
          <children>
             <Text layoutX="46.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistiques">
                <font>
                   <Font size="22.0" />
                </font>
             </Text>
-            <Button layoutX="46.0" layoutY="98.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-wrap-text: true; -fx-text-fill: white; -fx-background-color: black;" text="Dist. forces entrants" textAlignment="CENTER">
+            <Button layoutX="46.0" layoutY="98.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-wrap-text: true; -fx-text-fill: white; -fx-background-color: #2657a6;" text="Dist. forces entrants" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font></Button>
-            <Button layoutX="45.0" layoutY="331.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Dist. avg distance" textAlignment="CENTER" wrapText="true">
+            <Button layoutX="45.0" layoutY="331.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-background-color: #2657a6; -fx-text-fill: white;" text="Dist. avg distance" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font></Button>
-            <Button layoutX="45.0" layoutY="173.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-wrap-text: true; -fx-background-color: black; -fx-text-fill: white;" text="Dist. forces sortants" textAlignment="CENTER">
+            <Button layoutX="45.0" layoutY="173.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-wrap-text: true; -fx-background-color: #2657a6; -fx-text-fill: white;" text="Dist. forces sortants" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font></Button>
-            <Button layoutX="45.0" layoutY="252.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Dist. forces totales" textAlignment="CENTER" wrapText="true">
+            <Button layoutX="45.0" layoutY="252.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="111.0" style="-fx-background-color: #2657a6; -fx-text-fill: white;" text="Dist. forces totales" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font></Button>
-            <Button layoutX="46.0" layoutY="412.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="111.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Dist. transitivité local" textAlignment="CENTER" wrapText="true">
+            <Button layoutX="46.0" layoutY="412.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="111.0" style="-fx-background-color: #2657a6; -fx-text-fill: white;" text="Dist. transitivité local" textAlignment="CENTER" wrapText="true">
                <font>
-                  <Font size="13.0" />
+                  <Font name="System Bold" size="13.0" />
                </font>
             </Button>
             <Text layoutX="14.0" layoutY="525.0" strokeType="OUTSIDE" strokeWidth="0.0" text="transivité global: ">
@@ -50,8 +112,16 @@
                   <Font size="14.0" />
                </font>
             </Text>
-            <Text layoutX="14.0" layoutY="623.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Réciprocité:" />
+            <Text layoutX="14.0" layoutY="623.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Réciprocité:">
+               <font>
+                  <Font size="14.0" />
+               </font></Text>
          </children></AnchorPane>
-      <AnchorPane layoutX="-7.0" layoutY="666.0" prefHeight="135.0" prefWidth="1004.0" style="-fx-border-color: #000000;" />
+      <Text layoutX="1050.0" layoutY="691.0" strokeType="OUTSIDE" strokeWidth="0.0" text="nom du fichier:">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+      <Button fx:id="btn_back" layoutX="1017.0" layoutY="743.0" mnemonicParsing="false" onAction="#retour" prefHeight="25.0" prefWidth="165.0" text="Retour" />
    </children>
 </AnchorPane>
