--- a/src/fr/univavignon/ceri/second_page.fxml
+++ b/src/fr/univavignon/ceri/second_page.fxml
@@ -8,13 +8,12 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univavignon.ceri.SecondPage">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univavignon.ceri.SecondPage">
    <children>
-      <GridPane alignment="CENTER" gridLinesVisible="true" layoutY="666.0" prefHeight="134.0" prefWidth="1003.0" style="-fx-background-color: #2657a6;">
+      <GridPane alignment="CENTER" gridLinesVisible="true" layoutY="666.0" prefHeight="134.0" prefWidth="1006.0" style="-fx-background-color: #2657a6; -fx-border-color: black; -fx-border-width: 0 5 0 0;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -69,12 +68,7 @@
          </children>
       </GridPane>
       <Label fx:id="fileName" alignment="CENTER" layoutX="1017.0" layoutY="708.0" prefHeight="25.0" prefWidth="165.0" style="-fx-border-color: #000000;" text="Label" />
-      <Pane fx:id="visualisationWindow" prefHeight="668.0" prefWidth="1003.0">
-         <children>
-            <Line endX="877.29296875" endY="404.0" layoutX="326.0" layoutY="264.0" startX="-326.0" startY="404.0" strokeWidth="5.0" />
-            <Line endX="78.5" endY="544.5" layoutX="926.0" layoutY="255.0" startX="77.0" startY="-255.0" strokeWidth="5.0" />
-         </children></Pane>
-      <AnchorPane layoutX="1002.0" prefHeight="668.0" prefWidth="198.0">
+      <AnchorPane layoutX="1002.0" prefHeight="668.0" prefWidth="198.0" style="-fx-border-color: black; -fx-border-width: 0 0 5 5;">
          <children>
             <Text layoutX="46.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistiques">
                <font>
@@ -123,5 +117,6 @@
          </font>
       </Text>
       <Button fx:id="btn_back" layoutX="1017.0" layoutY="743.0" mnemonicParsing="false" onAction="#retour" prefHeight="25.0" prefWidth="165.0" text="Retour" />
+      <Pane fx:id="visualisationWindow" prefHeight="668.0" prefWidth="1003.0" style="-fx-border-color: black; -fx-border-width: 0 0 5 0;" />
    </children>
 </AnchorPane>
