--- a/src/fr/univavignon/ceri/second_page.fxml
+++ b/src/fr/univavignon/ceri/second_page.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.layout.Pane?>
 <AnchorPane fx:id="ap" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.univavignon.ceri.SecondPage">
    <children>
       <GridPane alignment="CENTER" gridLinesVisible="true" layoutY="666.0" prefHeight="134.0" prefWidth="1006.0" style="-fx-background-color: #2657a6; -fx-border-color: black; -fx-border-width: 0 5 0 0;">
@@ -89,7 +89,10 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Text>
-                        <Text fx:id="step" layoutX="149.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" />
+                        <Text fx:id="step" layoutX="149.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="">
+                           <font>
+                              <Font size="14.0" />
+                           </font></Text>
                      </children></AnchorPane>
                </content>
             </ScrollPane>
